--- a/recette.css
+++ b/recette.css
@@ -18,40 +18,38 @@ p.categorie{
 }
 div.contenu{
     background-color: white;
-    margin: 60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;
+    margin: 40px 8px 40px 8px;
+    padding: 0px 8px 20px 8px;
     box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.1);
     overflow: visible;
 }
-        h1{
-            text-align: center;
-            margin-bottom: 12px;
-            margin-top: 10px;
-        }
+h1{
+    text-align: center;
+    margin-bottom: 12px;
+    margin-top: 10px;
+}
 
-        p.description{
-            text-align: center;
-            max-width: 400px;
-            display: inline-block;
-            font-size: 14px;
-        }
-        .centre{
-            text-align: center;
-            width: 100%;
-        }
-        div.categorie{
-            margin-bottom: 0px;
-            margin-top: 0px;
-            overflow: visible;
-        }
-        div.separateur{
-            width: 100px;
-            margin-left: auto;
-            margin-right: auto;
-            border-bottom: 1px solid black;
-            
-        }
+p.description{
+    text-align: center;
+    max-width: 400px;
+    display: inline-block;
+    font-size: 14px;
+}
+.centre{
+    text-align: center;
+     width: 100%;
+}
+div.categorie{
+    margin-bottom: 0px;
+    margin-top: 0px;
+    overflow: visible;
+}
+div.separateur{
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: 1px solid black;        
+}
 table.info{
     position: absolute; 
     bottom: 0; 
@@ -65,11 +63,11 @@ div.info{
 }
 table.info td{
     text-align: center;
-    font-size: 13px;
+    font-size: 12px;
     vertical-align: top;
 }
 table.info th{
-    font-size: 16px;
+    font-size: 14px;
     vertical-align: bottom;
     padding-bottom: 8px;
             
@@ -82,7 +80,7 @@ img.info{
  min-height: 200px;
 }
 .colonne{
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 div.colonne h2{
@@ -94,12 +92,8 @@ div.colonne h2{
 }
 div.colonne1{
     display: inline-block;
-    margin-right: 10%;
 }
-div.colonne2{
-    float: right;
-    
-}
+
 
 div.ingredient p{
     border: 1px solid lightgray;
@@ -133,4 +127,37 @@ table.preparation td.preparation-etape{
 }
 table.preparation tr{
     height: 40px;
+}
+
+@media only screen and (min-width: 768px) {
+    div.contenu{
+        min-width: 350px;
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+    }
+    table.info{
+    height: 80px;
+}
+    table.info td{
+        font-size: 13px;
+    }
+    table.info th{
+        font-size: 16px;           
+    }
+    .colonne{
+        width: 45%;
+    }
+    div.colonne1{
+        margin-right: 10%;
+    }
+    div.colonne2{
+        float: right;  
+    }
+}
+@media only screen and (min-width: 900px) {
+    div.contenu{
+        margin-left: auto;
+        margin-right: auto;
+        width: 645px;
+    }
 }
